# medius

./: .gitignore  .gitmodules  README.md  meson.build
data/: medius.css  medius.ui  meson.build  resources.xml
example-config/: bluetoothlist.sh  config  playerctlenabled.sh  style.css  wifilist.sh
src/: main.cc  meson.build  window.cc  window.hh
src/config/: config.cc  config.hh  row_item.cc  row_item.hh
src/helper/: globals.cc  globals.hh  widget_css_provider.cc  widget_css_provider.hh
src/widgets/: base_widget.cc  base_widget.hh  button_widget.cc  button_widget.hh  expander_item.cc  expander_item.hh  image_widget.cc  image_widget.hh  list_widget.cc  list_widget.hh  popover_widget.cc  popover_widget.hh  rotated_widget.cc  rotated_widget.hh  slider_widget.cc  slider_widget.hh  svgbox_widget.cc  svgbox_widget.hh  textbox_widget.cc  textbox_widget.hh
subprojects/: ckdl.wrap
